# routes/comments.js
@@ -1,6 +1,7 @@
 import express from 'express'
-import { addNewComment, editComment, getCommentById, softDeleteComment, likeComment, dislikeComment, getActiveCommentsByPostId, getActiveCommentsByPostIdAndPage } from '../controllers/comments.js';
+import { addNewComment, editComment, getCommentById, softDeleteComment, likeComment, dislikeComment, getActiveCommentsByPostId, getActiveCommentsByPostIdAndPage, exportCsvFile, importCsvFile } from '../controllers/comments.js';
 import checkAuthorize from '../_helpers/checkAuthorize.js'
+import Role from '../_helpers/role.js'
 
 const router = express.Router();
 
@@ -16,8 +17,8 @@ router.patch('/:commentId/like', checkAuthorize(), likeComment);
 router.patch('/:commentId/dislike', checkAuthorize(), dislikeComment);
 
 //In Development
-// router.get('/csv/export', exportCsvFile);
-// router.post('/csv/import', importCsvFile);
+router.get('/csv/export', checkAuthorize(Role.Admin,Role.Researcher), exportCsvFile);
+router.post('/csv/import', checkAuthorize(Role.Admin) , importCsvFile);
 router.get('/post/:postId/page/:pageNo/size/:pageSize', getActiveCommentsByPostIdAndPage)
 
 export default router;
