# routes/subjects.js
@@ -1,6 +1,6 @@
 import express from 'express'
 import { getPostBySubject, getActivePostsBySubjectAndPage } from '../controllers/posts.js';
-import { getAllActiveSubjects, addSubject, updateSubject, getSubjectInfo, getAllActiveSubjectsByPage, searchSubjectByAbbr, getAllSubjectsAverageRatings} from '../controllers/subjects.js'
+import { getAllActiveSubjects, addSubject, updateSubject, getSubjectInfo, getAllActiveSubjectsByPage, searchSubjectByAbbr, getAllSubjectsAverageRatings, exportCsvFile, importCsvFile } from '../controllers/subjects.js'
 import checkAuthorize from '../_helpers/checkAuthorize.js'
 import Role from '../_helpers/role.js'
 
@@ -18,8 +18,8 @@ router.post('/', checkAuthorize(Role.Admin, Role.Teacher), addSubject);
 router.put('/:subject', checkAuthorize(Role.Admin, Role.Teacher), updateSubject);
 
 //In Development
-// router.get('/csv/export', exportCsvFile);
-// router.post('/csv/import', importCsvFile);
+router.get('/csv/export', checkAuthorize(Role.Admin,Role.Researcher), exportCsvFile);
+router.post('/csv/import', checkAuthorize(Role.Admin) , importCsvFile);
 router.get('/page/:pageNo/size/:pageSize', getAllActiveSubjectsByPage);
 router.get('/:subject/posts/page/:pageNo/size/:pageSize', getActivePostsBySubjectAndPage);
 
